Add chat using WebSocket
