# openapi/src/main/java/org/openapitools/vertxweb/server/model/WebSocketClientChatMessage.java
@@ -1,0 +1,70 @@
+package org.openapitools.vertxweb.server.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonValue;
+import org.openapitools.vertxweb.server.model.WebSocketClientChatMessageAllOf;
+import org.openapitools.vertxweb.server.model.WebSocketMessage;
+
+@JsonInclude(JsonInclude.Include.NON_NULL)
+public class WebSocketClientChatMessage extends WebSocketMessage  {
+  
+  private String message;
+
+  public WebSocketClientChatMessage () {
+
+  }
+
+  public WebSocketClientChatMessage (String message) {
+    this.message = message;
+  }
+
+    
+  @JsonProperty("message")
+  public String getMessage() {
+    return message;
+  }
+  public void setMessage(String message) {
+    this.message = message;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    WebSocketClientChatMessage webSocketClientChatMessage = (WebSocketClientChatMessage) o;
+    return Objects.equals(message, webSocketClientChatMessage.message);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(message);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class WebSocketClientChatMessage {\n");
+    sb.append("    ").append(toIndentedString(super.toString())).append("\n");
+    sb.append("    message: ").append(toIndentedString(message)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
